// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Report Template AutoComplete rendering renders Report Date input 1`] = `
<CommonForm
  className=""
  inputClassName="col-md-4"
  label="some-label"
  required={false}
  tooltipHelp={null}
  touched={true}
>
  <DateTimePicker
    hiddenValue={false}
    id="template-date-input-4"
    inputProps={
      Object {
        "autoComplete": "off",
        "name": "report_template_report[input_values][4][value]",
      }
    }
    locale="EN"
    placement="top"
    required={false}
    value="2019-01-04"
    weekStartsOn={1}
  />
</CommonForm>
`;

exports[`Report Template AutoComplete rendering renders with Require and Info 1`] = `
<CommonForm
  className=""
  inputClassName="col-md-4"
  label="some-label"
  required={true}
  tooltipHelp={
    <FieldLevelHelp
      buttonClass="field-help"
      content={
        <React.Fragment>
          some description
        </React.Fragment>
      }
      placement="top"
      rootClose={true}
    />
  }
  touched={true}
>
  <DateTimePicker
    hiddenValue={false}
    id="template-date-input-4"
    inputProps={
      Object {
        "autoComplete": "off",
        "name": "report_template_report[input_values][4][value]",
      }
    }
    locale="EN"
    placement="top"
    required={false}
    value="2019-01-04"
    weekStartsOn={1}
  />
</CommonForm>
`;
